# zprize-mobile-harness

./: .gitignore  Cargo.toml  LICENSE-MIT  Makefile  README.md  go.mod  go.sum  harness.go  main.go
android/ZPrize/: settings.gradle
android/ZPrize/app/: build.gradle
android/ZPrize/app/src/androidTest/java/com/example/zprize/: ExampleInstrumentedTest.java
android/ZPrize/app/src/main/: AndroidManifest.xml
android/ZPrize/app/src/main/assets/: points  scalars
android/ZPrize/app/src/main/java/com/example/zprize/: GnarkMSM.java  MainActivity.java  RustMSM.java
android/ZPrize/app/src/main/res/layout/: activity_main.xml
android/ZPrize/app/src/main/res/values/: strings.xml  themes.xml
android/ZPrize/app/src/main/res/values-night/: themes.xml
android/ZPrize/app/src/test/java/com/example/zprize/: ExampleUnitTest.java
android/ZPrize/gradle/wrapper/: gradle-wrapper.properties
msm/bls12-377/: bls12-377.go  g1.go  g1_test.go  marshal.go  marshal_zprize.go  multiexp.go  multiexp_test.go  result  scalars  zprize_test.go
msm/bls12-377/fp/: arith.go  element.go  element_exp.go  element_ops_arm64.s  element_test.go  element_utils.go  marshal_zprize.go
msm/bls12-377/fr/: arith.go  element.go  element_exp.go  element_mul_arm64.go  element_ops_noasm.go  element_test.go  marshal_zprize.go
src/: lib.rs  main.rs
